force-app/main/default/objects/High_Seas_Rule__c/High_Seas_Rule__c.object-meta.xml
<CustomObject>
    <label>公海池规则</label>
    <nameField>
        <displayFormat>HSR-{YYYYMMDD}-{0000}</displayFormat>
        <label>规则编号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>