force-app/main/default/objects/High_Seas_Rule__c/fields/Condition_Logic__c.field-meta.xml
<CustomField>
    <fullName>Condition_Logic__c</fullName>
    <label>条件并列关系</label>
    <length>255</length>
    <type>Text</type>
</CustomField>