force-app/main/default/objects/High_Seas_Rule__c/fields/Data_Filter_Condition__c.field-meta.xml
<CustomField>
    <fullName>Data_Filter_Condition__c</fullName>
    <label>数据筛选条件</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>