force-app/main/default/objects/High_Seas_Rule__c/fields/DataQuery_SQL__c.field-meta.xml
<CustomField>
    <fullName>DataQuery_SQL__c</fullName>
    <label>数据查询SQL</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>