force-app/main/default/objects/High_Seas_Rule__c/fields/Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Department_Name__c</fullName>
    <label>公海池名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>