force-app/main/default/objects/High_Seas_Rule__c/fields/Disable__c.field-meta.xml
<CustomField>
    <fullName>Disable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>停用</label>
    <type>Checkbox</type>
</CustomField>