force-app/main/default/objects/High_Seas_Rule__c/fields/LastExecuteDate__c.field-meta.xml
<CustomField>
    <fullName>LastExecuteDate__c</fullName>
    <label>上次执行时间</label>
    <type>DateTime</type>
</CustomField>