force-app/main/default/objects/High_Seas_Rule__c/fields/NoticeAddress__c.field-meta.xml
<CustomField>
    <fullName>NoticeAddress__c</fullName>
    <label>邮件通知地址</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>