force-app/main/default/objects/High_Seas_Rule__c/fields/ReturnReason__c.field-meta.xml
<CustomField>
    <fullName>ReturnReason__c</fullName>
    <label>退回原因</label>
    <length>255</length>
    <type>Text</type>
</CustomField>